Added basic scripted test for avro2Class task